CHANGES

2015-11-17
 * added -i MAPID and -c ALN_COV to run_phylo_cnv.py species for tuning sensitivity

2015-11-14
 * major changes to species module:
   * added -d db_type to allow for search against ssuRNA database
   * modified data files: pid_cutoffs.txt, gene_length.txt for ssuRNA genes
   * changed name of marker genes database (hs-blastn to phyeco) and added ssuRNA database
   * added word size as an option
   * renamed temporary files : <out>.m8 and <out>.read_counts
   * added check that <out> is not a directory
   * scp'ed new marker-genes database to lighthouse

2015-11-13
 * fixed bug in snvs.py: line 50: bam_path was not defined
 * added more unit tests

2015-11-12
 * added /test/test_phylo_cnv.py for unit testing

2015-11-10
 * fixed bug with --keep_temp flag
 * run_phylo_cnv.py genes & snvs: checks if bamfile is corrupt
 * only need profile if building database: run_phylo_cnv.py

2015-11-08
 * made default alignment coverage 0.75 in run_phylo_cnv.py genes
 * merge_genes.py, merge_species.py, merge_snps.py:
   * replaced -i <indir> with -i <input> and -t <intype>

2015-11-07
 * more help text to run_phylo_cnv.py

2015-11-06
 * added more help text to merge_species.py, merge_genes.py, and merge_snps.py
 * parameters now printed to stdout for run_phylo_cnv.py and merging scripts
 * made removal of temp files default, replaces --remove with --keep_temp flag
 * changed several flag names including:
   * replaced -g GENOME_CLUSTER with -s SPECIES_ID in merge_genes.py and merge_snps.py
   * replaced --ref_coverage with --fract_cov in merge_snps.py
   * replaced the term snp with site in merge_snps.py

2015-11-05
 * fixed bug in merge_genes.py: now writes <species>.gene_depth
 * copyright now printed
 * changed defaults for run_phylo_cnv.py snvs (map_id=0.94, mapq=20, baseq=20)
 * fixed bug when specifying mapq & baseq in run_phylo_cnv.py snvs
 * removed --debug flag
 * renamed misc.py to utility.py